--- a/ModulMatka/.cproject
+++ b/ModulMatka/.cproject
@@ -48,6 +48,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ModulMatka/Ethernet/lwIP/include/lwip}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ModulMatka/Ethernet/lwIP/include/arch}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ModulMatka/Ethernet/enc28j60}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ModulMatka/Radio}&quot;"/>
 								</option>
 								<option id="com.atollic.truestudio.gcc.symbols.defined.1670122205" name="Defined symbols" superClass="com.atollic.truestudio.gcc.symbols.defined" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__weak=__attribute__((weak))"/>
